--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,20 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('/Users/suikajy/Desktop/suikajy/code/ASProject/Todo/app/todo.jks')
+            storePassword 'qweasd'
+            keyPassword 'qweasd'
+            keyAlias = 'todo'
+        }
+        release {
+            storeFile file('/Users/suikajy/Desktop/suikajy/code/ASProject/Todo/app/todo.jks')
+            storePassword 'qweasd'
+            keyAlias = 'todo'
+            keyPassword 'qweasd'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.practice.todo"
@@ -32,6 +46,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
     def anko_version = '0.10.8'
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
